src/coreaudio/coreaudio.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _saudio_AudioQueueBuffer {
    pub mAudioDataBytesCapacity: u32,
    pub mAudioData: *mut ::std::os::raw::c_void,
    pub mAudioDataByteSize: u32,
    pub mUserData: *mut ::std::os::raw::c_void,
    pub mPacketDescriptionCapacity: u32,
    pub mPacketDescriptions: *mut _saudio_AudioStreamPacketDescription,
    pub mPacketDescriptionCount: u32,
}
#[test]
fn bindgen_test_layout__saudio_AudioQueueBuffer() {
    assert_eq!(
        ::std::mem::size_of::<_saudio_AudioQueueBuffer>(),
        56usize,
        concat!("Size of: ", stringify!(_saudio_AudioQueueBuffer))
    );
    assert_eq!(
        ::std::mem::align_of::<_saudio_AudioQueueBuffer>(),
        8usize,
        concat!("Alignment of ", stringify!(_saudio_AudioQueueBuffer))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioQueueBuffer>())).mAudioDataBytesCapacity as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioQueueBuffer),
            "::",
            stringify!(mAudioDataBytesCapacity)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioQueueBuffer>())).mAudioData as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioQueueBuffer),
            "::",
            stringify!(mAudioData)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioQueueBuffer>())).mAudioDataByteSize as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioQueueBuffer),
            "::",
            stringify!(mAudioDataByteSize)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioQueueBuffer>())).mUserData as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioQueueBuffer),
            "::",
            stringify!(mUserData)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioQueueBuffer>())).mPacketDescriptionCapacity
                as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioQueueBuffer),
            "::",
            stringify!(mPacketDescriptionCapacity)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioQueueBuffer>())).mPacketDescriptions as *const _
                as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioQueueBuffer),
            "::",
            stringify!(mPacketDescriptions)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioQueueBuffer>())).mPacketDescriptionCount as *const _
                as usize
        },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioQueueBuffer),
            "::",
            stringify!(mPacketDescriptionCount)
        )
    );
}
pub type _saudio_AudioQueueBufferRef = *mut _saudio_AudioQueueBuffer;
pub type _saudio_AudioQueueOutputCallback = ::std::option::Option<
    unsafe extern "C" fn(
        user_data: *mut ::std::os::raw::c_void,
        inAQ: _saudio_AudioQueueRef,
        inBuffer: _saudio_AudioQueueBufferRef,
    ),
>;
extern "C" {
    pub fn AudioQueueNewOutput(
        inFormat: *const _saudio_AudioStreamBasicDescription,
        inCallbackProc: _saudio_AudioQueueOutputCallback,
        inUserData: *mut ::std::os::raw::c_void,
        inCallbackRunLoop: _saudio_CFRunLoopRef,
        inCallbackRunLoopMode: _saudio_CFStringRef,
        inFlags: u32,
        outAQ: *mut _saudio_AudioQueueRef,
    ) -> _saudio_OSStatus;
}
extern "C" {
    pub fn AudioQueueDispose(inAQ: _saudio_AudioQueueRef, inImmediate: bool) -> _saudio_OSStatus;
}
extern "C" {
    pub fn AudioQueueAllocateBuffer(
        inAQ: _saudio_AudioQueueRef,
        inBufferByteSize: u32,
        outBuffer: *mut _saudio_AudioQueueBufferRef,
    ) -> _saudio_OSStatus;
}
extern "C" {
    pub fn AudioQueueEnqueueBuffer(
        inAQ: _saudio_AudioQueueRef,
        inBuffer: _saudio_AudioQueueBufferRef,
        inNumPacketDescs: u32,
        inPacketDescs: *const _saudio_AudioStreamPacketDescription,
    ) -> _saudio_OSStatus;
}
extern "C" {
    pub fn AudioQueueStart(
        inAQ: _saudio_AudioQueueRef,
        inStartTime: *const _saudio_AudioTimeStamp,
    ) -> _saudio_OSStatus;
}
extern "C" {
    pub fn AudioQueueStop(inAQ: _saudio_AudioQueueRef, inImmediate: bool) -> _saudio_OSStatus;
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout___va_list_tag() {
    assert_eq!(
        ::std::mem::size_of::<__va_list_tag>(),
        24usize,
        concat!("Size of: ", stringify!(__va_list_tag))
    );
    assert_eq!(
        ::std::mem::align_of::<__va_list_tag>(),
        8usize,
        concat!("Alignment of ", stringify!(__va_list_tag))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).gp_offset as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(gp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).fp_offset as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(fp_offset)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).overflow_arg_area as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(overflow_arg_area)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<__va_list_tag>())).reg_save_area as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(__va_list_tag),
            "::",
            stringify!(reg_save_area)
        )
    );
}
